<resources>
    <string name="app_name">LansiaSehat</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="activity_hint">hint actiovyty</string>
    <string name="ayo">Mulai</string>
    <string name="deskripsi">Mulai Hidup Sehat dan jelajahi fitur-fitur kami sekarang.</string>
    <string-array name="category_array">
        <item>Olahraga</item>
        <item>Makan</item>
        <item>Minum Obat</item>
        <item>Pergi</item>
        <item>Lainnya</item>
    </string-array>
    <string-array name="gambarcategory_array">
        <item>@drawable/dumbell</item>
        <item>@drawable/eat</item>
        <item>@drawable/medicine</item>
        <item>@drawable/go</item>
        <item>@drawable/elder</item>
    </string-array>
    <string-array name="gambarolahraga_array">
        <item>@drawable/awal</item>
        <item>@drawable/utama</item>
        <item>@drawable/akhir</item>
    </string-array>
    <string-array name="gambarnutrisi_array">
        <item>@drawable/b12</item>
        <item>@drawable/calcium</item>
        <item>@drawable/vitd</item>
        <item>@drawable/magnesium</item>
        <item>@drawable/serat</item>
        <item>@drawable/lemak</item>
        <item>@drawable/air</item>
    </string-array>
    <string-array name="judulnutrisi_array">
        <item>Vitamin B12</item>
        <item>Kalsium</item>
        <item>Vitamin D</item>
        <item>Magnesium</item>
        <item>Serat</item>
        <item>Lemak</item>
        <item>Air</item>
    </string-array>
    <string-array name="penjelasannutrisi_array">
        <item>Asupan makanan yang mengandung vitamin B12 dibutuhkan untuk mendorong pembentukan sel darah merah dan DNA. Untuk memenuhi kebutuhan nutrisi ini, cobalah mengonsumsi makanan yang kaya kandungan vitamin B12.</item>
        <item>Asupan nutrisi yang satu ini memiliki peran yang cukup penting untuk tubuh. Salah satu manfaat kalsium yang penting adalah membangun dan menjaga kesehatan tubuh, sehingga risiko gangguan tulang pada lansia bisa dihindari.</item>
        <item>Asupan nutrisi vitamin D bisa membantu meningkatkan efektivitas kalsium dalam menjaga kesehatan tulang, serta menurunkan risiko osteoporosis. Selain itu, vitamin D juga bisa membantu melindungi tubuh dari risiko berbagai penyakit, seperti kanker, diabetes tipe 1, serta penyakit autoimun.</item>
        <item>Magnesium berperan penting dalam menjaga kesehatan tubuh. Asupan nutrisi ini bisa membantu menjaga imunitas, kesehatan jantung, serta kekuatan tulang.</item>
        <item>Mengonsumsi makanan yang kaya serat membantu menjaga kesehatan sistem pencernaan.</item>
        <item>Lansia disarankan untuk mengonsumsi makanan yang kaya akan kandungan lemak omega-3. Ada banyak manfaat yang didapat dari asupan nutrisi ini, termasuk menurunkan risiko penyakit rheumatoid arthritis. Selain itu, mampu memperlambat proses penuaan dan penurunan kemampuan melihat pada lansia.</item>
        <item>Tubuh lansia tetap membutuhkan cukup banyak asupan air agar kinerja organ selalu terjaga. Untuk menghindari risiko penyakit, usahakan selalu mengonsumsi 8 gelas air atau setara dengan 2 liter air setiap hari.</item>
    </string-array>
    <string-array name="gambarmakanan_array">
        <item>@drawable/b12</item>
        <item>@drawable/calcium</item>
        <item>@drawable/vitd</item>
        <item>@drawable/magnesium</item>
        <item>@drawable/serat</item>
        <item>@drawable/lemak</item>
        <item>@drawable/air</item>
    </string-array>
    <string-array name="gambarb12_array">
        <item>@drawable/ikan</item>
        <item>@drawable/sapi</item>
        <item>@drawable/ayam</item>
        <item>@drawable/sereal</item>
    </string-array>
    <string-array name="namab12_array">
        <item>Salmon, tuna, sarden</item>
        <item>Daging sapi</item>
        <item>Ayam</item>
        <item>Sereal</item>
    </string-array>
    <string-array name="gambarcalcium_array">
        <item>@drawable/susu</item>
        <item>@drawable/bayam</item>
        <item>@drawable/jusjeruk</item>
        <item>@drawable/ikan</item>
    </string-array>
    <string-array name="namacalcium_array">
        <item>Susu</item>
        <item>Bayam</item>
        <item>Jus Jeruk</item>
        <item>Salmon</item>
    </string-array>
    <string-array name="gambarvitd_array">
        <item>@drawable/egg</item>
        <item>@drawable/susu</item>
        <item>@drawable/jusjeruk</item>
        <item>@drawable/ikan</item>
    </string-array>
    <string-array name="namavitd_array">
        <item>Kuning Telur</item>
        <item>Susu</item>
        <item>Jus Jeruk</item>
        <item>Makarel</item>
    </string-array>
    <string-array name="gambarmag_array">
        <item>@drawable/kacang</item>
        <item>@drawable/berasmerah</item>
        <item>@drawable/bayam</item>
        <item>@drawable/buncis</item>
    </string-array>
    <string-array name="namamag_array">
        <item>Kacang mete</item>
        <item>Beras merah</item>
        <item>Bayam</item>
        <item>Buncis</item>
    </string-array>
    <string-array name="gambarserat_array">
        <item>@drawable/apel</item>
        <item>@drawable/pisang</item>
        <item>@drawable/brokoli</item>
        <item>@drawable/buncis</item>
        <item>@drawable/wortel</item>
        <item>@drawable/roti</item>
    </string-array>
    <string-array name="namaserat_array">
        <item>Apel</item>
        <item>Pisang</item>
        <item>Brokoli</item>
        <item>Buncis</item>
        <item>Wortel</item>
        <item>Roti gandum</item>
    </string-array>
    <string-array name="gambaromega_array">
        <item>@drawable/alpukat</item>
        <item>@drawable/zaitun</item>
        <item>@drawable/ikan</item>
        <item>@drawable/kacang</item>
    </string-array>
    <string-array name="namaomega_array">
        <item>Alpukat</item>
        <item>Minyak Zaitun</item>
        <item>Salmon</item>
        <item>Biji Kenari dan Rami</item>
    </string-array>
    <string-array name="gambarair_array">
        <item>@drawable/mineral</item>
    </string-array>
    <string-array name="namaair_array">
        <item>Air Mineral</item>
    </string-array>
    <string-array name="gambarkonsumsi_array">
        <item>@drawable/ikan</item>
        <item>@drawable/sapi</item>
        <item>@drawable/ayam</item>
        <item>@drawable/sereal</item>
        <item>@drawable/egg</item>
        <item>@drawable/susu</item>
        <item>@drawable/jusjeruk</item>
        <item>@drawable/ikan</item>
        <item>@drawable/kacang</item>
        <item>@drawable/berasmerah</item>
        <item>@drawable/bayam</item>
        <item>@drawable/buncis</item>
        <item>@drawable/apel</item>
        <item>@drawable/pisang</item>
        <item>@drawable/brokoli</item>
        <item>@drawable/buncis</item>
        <item>@drawable/wortel</item>
        <item>@drawable/roti</item>
        <item>@drawable/alpukat</item>
        <item>@drawable/zaitun</item>
        <item>@drawable/ikan</item>
        <item>@drawable/kacang</item>
        <item>@drawable/mineral</item>
        <item>@drawable/tahu</item>
        <item>@drawable/tempe</item>
        <item>@drawable/ubi</item>
        <item>@drawable/pepaya</item>
        <item>@drawable/jagung</item>
        <item>@drawable/anggur</item>
        <item>@drawable/semangka</item>
        <item>@drawable/timun</item>
        <item>@drawable/kol</item>
        <item>@drawable/mangga</item>
    </string-array>
    <string-array name="judulkonsumsi_array">
        <item>Tuna dan sarden</item>
        <item>Daging sapi</item>
        <item>Ayam</item>
        <item>Sereal</item>
        <item>Kuning Telur</item>
        <item>Susu</item>
        <item>Jus Jeruk</item>
        <item>Makarel</item>
        <item>Kacang mete</item>
        <item>Beras merah</item>
        <item>Bayam</item>
        <item>Buncis</item>
        <item>Apel</item>
        <item>Pisang</item>
        <item>Brokoli</item>
        <item>Buncis</item>
        <item>Wortel</item>
        <item>Roti gandum</item>
        <item>Alpukat</item>
        <item>Minyak Zaitun</item>
        <item>Salmon</item>
        <item>Biji Kenari dan Rami</item>
        <item>Air Mineral</item>
        <item>Tahu</item>
        <item>Tempe</item>
        <item>Ubi</item>
        <item>Pepaya</item>
        <item>Jagung</item>
        <item>Anggur</item>
        <item>Semangka</item>
        <item>Timun</item>
        <item>Kol</item>
        <item>Mangga</item>
    </string-array>
    <string name="simpan">Simpan</string>
    <string name="judul">Judul Pengingat</string>
    <string name="lakukan">Apa yang perlu dilakukan</string>
    <string name="waktutanggal">Pengingat Waktu dan Jam</string>
    <string name="kategori">Kategori</string>
    <string name="back">back</string>
</resources>