<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.rencana.RencanaActivity"
    android:background="@color/background">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/secondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/back_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:contentDescription="@string/back"
                android:padding="8dp"
                android:src="@drawable/baseline_arrow_back_ios_24" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:src="@drawable/logo" />
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/poppins_extrabold"
        android:text="@string/judul"
        android:textColor="@color/primary"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/titleInpLay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/edittext_background"
        android:fontFamily="@font/poppins_semibold"
        android:textColorHint="#8A8A8A"
        android:textSize="20sp"
        android:hint="Masukan judulnya"
        android:inputType="textCapWords"
        android:padding="16dp"
        android:paddingEnd="8dp"
        android:maxLength="20"
         />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="4dp"
        android:text="@string/lakukan"
        android:fontFamily="@font/poppins_extrabold"
        android:textColor="@color/primary"
        android:textSize="25sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:id="@+id/taskInpLay"
        android:hint="Masukan apa yang perlu di lakukan"
        android:lines="3"
        android:gravity="start"
        android:background="@drawable/edittext_background"
        android:fontFamily="@font/poppins_semibold"
        android:textColorHint="#8A8A8A"
        android:textSize="18sp"
        android:padding="10dp"
        android:maxLength="50"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="4dp"
        android:text="@string/waktutanggal"
        android:fontFamily="@font/poppins_extrabold"
        android:textColor="@color/primary"
        android:textSize="25sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:id="@+id/dateEdt"
        android:hint="Atur tanggal"
        android:clickable="true"
        android:cursorVisible="false"
        android:drawablePadding="8dp"
        android:drawableEnd="@drawable/ic_date_range_black_24dp"
        android:drawableTint="@color/primary"
        android:focusable="false"

        android:paddingEnd="8dp"
        android:background="@drawable/edittext_background"
        android:fontFamily="@font/poppins_semibold"
        android:textColorHint="#8A8A8A"
        android:textSize="20sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:id="@+id/timeEdt"
        android:hint="Atur waktu"
        android:clickable="true"
        android:cursorVisible="false"
        android:drawablePadding="8dp"
        android:drawableEnd="@drawable/ic_access_time_black_24dp"
        android:drawableTint="@color/primary"
        android:focusable="false"

        android:paddingEnd="8dp"
        android:background="@drawable/edittext_background"
        android:fontFamily="@font/poppins_semibold"
        android:textColorHint="#8A8A8A"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"

        android:text="@string/kategori"
        android:fontFamily="@font/poppins_extrabold"
        android:textColor="@color/primary"
        android:textSize="25sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp">


        <Spinner
            android:id="@+id/spinnerCategory"
            android:layout_width="326dp"
            android:layout_height="49dp"
            android:layout_weight="1"
            android:background="@drawable/border_spinner"
             android:padding="8dp"
        />


    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/saveBtn"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="20dp"
        android:layout_height="56dp"
        android:layout_gravity="end"
        android:layout_marginTop="32dp"
        android:background="@drawable/btn_blue_selector"
        android:fontFamily="@font/poppins_extrabold"
        android:text="@string/simpan"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="25dp"
        app:cornerRadius="25dp" />

</LinearLayout>